# Agent-Translator

agent_translator/: README.md  academic_paper_translated_italian.docx  config.yaml  diagnose.py  direct_translator.py  main.py  pyproject.toml  requirements.txt  resumable_translator.py  setup.py
agent_translator/knowledge/: user_preference.txt
agent_translator/output/: academic_paper_translated_spanish.docx  ~$ademic_paper_translated_spanish.docx
agent_translator/src/agent_translator/: __init__.py  crew.py
agent_translator/src/agent_translator/config/: agents.yaml  tasks.yaml
agent_translator/src/agent_translator/tools/: __init__.py  custom_tools.py
