[project]
name = "agent_translator"
version = "0.1.0"
description = "agent_translator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
agent_translator = "agent_translator.main:run"
run_crew = "agent_translator.main:run"
train = "agent_translator.main:train"
replay = "agent_translator.main:replay"
test = "agent_translator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
